discussion/kv_engine/170153/170153_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49512: Take bucket allocation guard in logQTime

Currently we don't and it means that we're not logging the bucket
name against the task that has slow scheduling. I don't think we are
allocating any memory in this function but if we are then this also
corrects a memory tracking issue.

Change-Id: I1e2f42dd3a02767e325ce84486fbedce28ac5161

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-02-07 09:15:08.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-07 09:32:59.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15355/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:6991:33: error: unexpected namespace name "engine": expected expression [clang-diagnostic-error]
    BucketAllocationGuard guard(engine);
                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:6991:33: error: use of undeclared identifier "engine"; did you mean "cb::engine"? [clang-diagnostic-error]
    BucketAllocationGuard guard(engine);
                                ^~~~~~
                                cb::engine
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/engine.h:138:15: note: "cb::engine" declared here
namespace cb::engine {
              ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15355/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:6991:33:
error: unexpected namespace name "engine": expected expression [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15355/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25486/ : FAILURE

Compile error at [2022-02-07T09:20:31.467Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/ep_engine.cc:6991:33:
error: use of undeclared identifier "engine"; did you mean "cb::engine"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25486/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18129/ : FAILURE

Compile error at [2022-02-07T09:19:10.507Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/ep_engine.cc:6991:33:
error: use of undeclared identifier "engine"; did you mean "cb::engine"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18129/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17391/ : FAILURE

Compile error at [2022-02-07T09:19:52.561Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/ep_engine.cc:6991:33:
error: ?engine? was not declared in this scope; did you mean ?cb::engine??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17391/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43607/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/ep_engine.cc(6991): error C2065: "engine": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43607/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5002/ : FAILURE

Compile error at [2022-02-07T09:19:51.347Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/ep_engine.cc:6991:33:
error: use of undeclared identifier "engine"; did you mean "cb::engine"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5002/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36799/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_engine.cc:6991:33:
error: use of undeclared identifier "engine"; did you mean "cb::engine"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36799/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16171/ : FAILURE

Compile error at [2022-02-07T09:21:37.453Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/ep_engine.cc:6991:33:
error: use of undeclared identifier "engine"; did you mean "cb::engine"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16171/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17080/ : FAILURE

Compile error at [2022-02-07T09:18:04.664Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/ep_engine.cc:6991:33:
error: ?engine? was not declared in this scope; did you mean ?cb::engine??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17080/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5062/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14198/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
